# sarafan

./: .env.example  .gitignore  README.md  pyproject.toml
sarafan/: constants.py
sarafan/core/: asgi.py  backend.py  middleware.py  settings.py  urls.py  wsgi.py
sarafan/core/management/commands/: fill-test-db.py
sarafan/products/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  utils.py  validators.py  views.py
sarafan/products/data_factories/: factory.py  utils.py
sarafan/products/migrations/: 0001_initial.py  0002_alter_cartitem_product_alter_shopingcart_user.py
sarafan/templates/base/: base.html
sarafan/templates/products/: category.html  change_shoping_cart_items.html  product.html  shoping_cart.html  shoping_cart_confirm_delete.html
sarafan/templates/users/: login.html  register.html
sarafan/users/: apps.py  signals.py  urls.py  utils.py  views.py
sarafan/users/data_factories/: factory.py
